Layout fix in addition to 5bd282ecb
Remove scrollbar unless necessary
CT-60 #time 10m

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,5 @@
  */
 html {
     padding-top: 65px;
-}
-
-html, body {
-    height: 100%;
+    padding-bottom: 110px;
 }
